@@ -1,3 +1,9 @@
+2014-02-18  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/60231
+	* resolve.c (check_generic_tbp_ambiguity): Check for presence of dummy
+	arguments to prevent ICE.
+
 2014-02-17  Janus Weil  <janus@gcc.gnu.org>
 
 	PR fortran/55907
